--- a/templates/bgp/eos.j2
+++ b/templates/bgp/eos.j2
@@ -16,7 +16,7 @@ router bgp {{ bgp.as }}
 {% endfor %}
  address-family ipv4
 !
-{% if loopback.ipv4 is defined %}
+{% if loopback.ipv4 is defined and bgp.advertise_loopback %}
   network {{ loopback.ipv4 }}
 {% endif %}
 !
