--- a/templates/bgp/junos.j2
+++ b/templates/bgp/junos.j2
@@ -29,7 +29,7 @@ policy-options {
     term advertise {
       from {
         protocol direct;
-        interface [ lo0.0 {%- for l in links if l.bgp.advertise|default("") %}l.ifname {%- endfor %} ];
+        interface [ {{ "lo0.0" if bgp.advertise_loopback }}{%- for l in links if l.bgp.advertise|default("") %} l.ifname{%- endfor %} ];
       }
       then accept;
     }
