--- a/templates/bgp/nxos.j2
+++ b/templates/bgp/nxos.j2
@@ -3,7 +3,7 @@ feature bgp
 router bgp {{ bgp.as }}
  address-family ipv4 unicast
 !
-{% if loopback.ipv4 is defined %}
+{% if loopback.ipv4 is defined and bgp.advertise_loopback %}
   network {{ loopback.ipv4 }}
 {% endif %}
 !
