--- a/templates/bgp/eos.j2
+++ b/templates/bgp/eos.j2
@@ -5,11 +5,18 @@ router bgp {{ bgp.as }}
   neighbor {{ n.ipv4 }} description {{ n.name }}
 {%   if n.type == 'ibgp' %}
   neighbor {{ n.ipv4 }} update-source Loopback0
-{%   if bgp.next_hop_self is defined and bgp.next_hop_self %}
+{%     if bgp.next_hop_self is defined and bgp.next_hop_self %}
   neighbor {{ n.ipv4 }} next-hop-self
-{%   endif %}
+{%     endif %}
 {%     if bgp.rr|default('') and not n.rr|default('') %}
   neighbor {{ n.ipv4 }} route-reflector-client
+{%     endif %}
+{%     if bgp.community.ibgp|default([]) %}
+  neighbor {{ n.ipv4 }} send-community {{ bgp.community.ibgp|join(' ') }}
+{%     endif %}
+{%   else %}
+{%     if bgp.community.ebgp|default([]) %}
+  neighbor {{ n.ipv4 }} send-community {{ bgp.community.ebgp|join(' ') }}
 {%     endif %}
 {%   endif %}
 !
