--- a/templates/bgp/ios.j2
+++ b/templates/bgp/ios.j2
@@ -1,3 +1,7 @@
+{% macro community(list) -%}
+{{ "both" if list|length >= 2 else list[0] }}
+{%- endmacro %}
+!
 router bgp {{ bgp.as }}
 {% for n in bgp.neighbors if n.ipv4 is defined %}
   neighbor {{ n.ipv4 }} remote-as {{ n.as }}
@@ -23,11 +27,18 @@ router bgp {{ bgp.as }}
 {% for n in bgp.neighbors if n.ipv4 is defined %}
   neighbor {{ n.ipv4 }} activate
 {%   if n.type == 'ibgp' %}
-{%   if bgp.next_hop_self is defined and bgp.next_hop_self %}
+{%     if bgp.community.ibgp|default([]) %}
+  neighbor {{ n.ipv4 }} send-community {{ community(bgp.community.ibgp) }}
+{%     endif %}
+{%     if bgp.next_hop_self is defined and bgp.next_hop_self %}
   neighbor {{ n.ipv4 }} next-hop-self
 {%     endif %}
 {%     if bgp.rr|default('') and not n.rr|default('') %}
   neighbor {{ n.ipv4 }} route-reflector-client
+{%     endif %}
+{%   else %}{# EBGP IPv4 neighbor #}
+{%     if bgp.community.ebgp|default([]) %}
+  neighbor {{ n.ipv4 }} send-community {{ community(bgp.community.ebgp) }}
 {%     endif %}
 {%   endif %}
 {% endfor %}
