--- a/templates/bgp/nxos.j2
+++ b/templates/bgp/nxos.j2
@@ -5,43 +5,48 @@
 feature bgp
 !
 router bgp {{ bgp.as }}
- address-family ipv4 unicast
+{% for af in ['ipv4','ipv6'] if bgp [af] is defined %}
 !
-{% if loopback.ipv4 is defined and bgp.advertise_loopback %}
-  network {{ loopback.ipv4 }}
-{% endif %}
+ address-family {{ af }} unicast
 !
-{% for l in links|default([]) if l.bgp.advertise|default("") and l.ipv4 is defined %}
-  network {{ l.ipv4|ipaddr(0) }}
-{% endfor %}
+{%   if loopback[af] is defined and bgp.advertise_loopback %}
+  network {{ loopback[af]|ipaddr(0) }}
+{%   endif %}
 !
-{% for pfx in bgp.originate|default([]) %}
+{%   for l in links|default([]) if l.bgp.advertise|default("") and l[af] is defined %}
+  network {{ l[af]|ipaddr(0) }}
+{%   endfor %}
+!
+{%   for pfx in bgp.originate|default([]) if af == 'ipv4' %}
   network {{ pfx|ipaddr('0') }}
+{%   endfor %}
 {% endfor %}
 !
-{% for n in bgp.neighbors if n.ipv4 is defined %}
- neighbor {{ n.ipv4 }} remote-as {{ n.as }}
+{% for af in ['ipv4','ipv6'] %}
+{%   for n in bgp.neighbors if n[af] is defined %}
+ neighbor {{ n[af] }} remote-as {{ n.as }}
   description {{ n.name }}
-{%   if n.type == 'ibgp' %}
+{%     if n.type == 'ibgp' %}
   update-source loopback0
-{%   endif %}
-  address-family ipv4 unicast
-{%   if n.type == 'ibgp' %}
-{%   if bgp.next_hop_self is defined and bgp.next_hop_self %}
+{%     endif %}
+  address-family {{ af }} unicast
+{%     if n.type == 'ibgp' %}
+{%       if bgp.next_hop_self is defined and bgp.next_hop_self %}
    next-hop-self
-{%     endif %}
-{%     if bgp.rr|default('') and not n.rr|default('') %}
+{%       endif %}
+{%       if bgp.rr|default('') and not n.rr|default('') %}
    route-reflector-client
-{%     endif %}
-{%     if bgp.community.ibgp|default([]) %}
+{%       endif %}
+{%       if bgp.community.ibgp|default([]) %}
    send-community {{ community(bgp.community.ibgp) }}
-{%     endif %}
-{%   else %}
-{%     if bgp.community.ebgp|default([]) %}
+{%       endif %}
+{%     else %}
+{%       if bgp.community.ebgp|default([]) %}
    send-community {{ community(bgp.community.ebgp) }}
+{%       endif %}
 {%     endif %}
-{%   endif %}
 !
+{%  endfor %}
 {% endfor %}
 !
 {% for pfx in bgp.originate|default([]) %}
